# gephyr

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  OAUTH_SETUP.md  README.md  console.ps1  console.sh  publish.ps1  publish.sh  start-auth.ps1  start-auth.sh  start-docker.ps1  start-docker.sh  test-clean.ps1  test-clean.sh
.github/workflows/: allow-guard.yml  parity-gate.yml
docker/: Dockerfile  docker-compose.yml
docs/: ADVANCED_GUIDE.md  AGENT_CODE_CAPABILITIES.md  AGENT_CODE_CAPABILITIES_REPORT.md  ARCHITECTURE.md
docs/agents/: ANTIGRAVITY_COMPAT_INTEGRITY_PLAN.md  API_SURFACE.md  DEFECT_DISCOVERY_REPORT.md  EDGE_CASES_DEFECTS.md  EXECUTION_TRACKED_CHECKLIST.md  FOLLOW_UP_TICKETS.md  GOOGLE_STRICT_MIMIC_VALIDATION.md  (+8 more)
output/: gephyr_google_outbound_headers.jsonl  google_trace_diff_report.json  google_trace_diff_report.txt  known_good.gephyr_scope.jsonl  known_good.jsonl  known_good_capture_hosts.json  system_proxy.before_restore.20260216-221242.json  trace_config_before.json
scripts/: attribute-ls-sni.ps1  attribute-ls-sni.sh  capture-known-good-antigravity.ps1  capture-known-good-antigravity.sh  capture-known-good-mitmproxy.ps1  capture-known-good-mitmproxy.sh  capture-mitmproxy-all.ps1  capture-mitmproxy-all.sh  check-allow-attributes.ps1  check-allow-attributes.sh  check-no-raw-parity-artifacts.ps1  check-no-raw-parity-artifacts.sh  correlate-mitm-ls-timeline.ps1  correlate-mitm-ls-timeline.sh  diff-google-traces.ps1  diff-google-traces.sh  extract-sni-from-pcap.ps1  extract-sni-from-pcap.sh  live-google-parity-verify-antigravity.ps1  live-google-parity-verify-antigravity.sh  live-google-parity-verify-interactive.ps1  live-google-parity-verify-interactive.sh  live-google-parity-verify.ps1  live-google-parity-verify.sh  mitm-google-capture.py  parity-master-validate.ps1  parity-master-validate.sh  parity-refresh-baseline.ps1  parity-refresh-baseline.sh  prune-parity-output.ps1  prune-parity-output.sh  report-model-quota.ps1  report-model-quota.sh  set-antigravity-ide-proxy.ps1  set-antigravity-ide-proxy.sh  setup-mitmproxy.ps1  setup-mitmproxy.sh  smoke-admin-routes.ps1  smoke-admin-routes.sh  split-known-good-by-ua.ps1  (+21 more)
src/: Cargo.toml  constants.rs  error.rs  lib.rs  main.rs  test_utils.rs
(+215 files in other folders)
