[package]
name = "gephyr"
version = "4.1.8"
description = "Gephyr headless AI relay service for Google AI services"
authors = ["you"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "gephyr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "gephyr"
path = "src/main.rs"

[features]
default = ["tls-native"]
tls-native = ["reqwest/default-tls"]
tls-rustls = ["reqwest/rustls-tls-native-roots"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "socks", "charset", "http2", "gzip"] }
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
thiserror = "2.0.17"

# Proxy service dependencies
axum = { version = "0.7", features = ["multipart"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dashmap = "6.1"
futures = "0.3"
rand = "0.8"                        # Generate sessionId and mock project_id
async-stream = "0.3.6"              # Simplify asynchronous stream generation
regex = "1.12.2"                    # Duration parsing
once_cell = "1.19"                  # Static initialization (model mapping table)
bytes = "1.5"                       # SSE byte operations
libc = "0.2"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
sha2 = "0.10"
toml = "0.8"
toml_edit = "0.22"
parking_lot = "0.12.5"
tokio-util = "0.7.18"
aes-gcm = "0.10.3"
machine-uid = "0.5.4"
